# variant_benchmark

./: CMakeLists.txt  profiler.h
extended_variant/: CMakeLists.txt  constant.h  main.cpp  utility.cpp  utility.h  values_description.cpp  values_description.h
move_vs_copy/: CMakeLists.txt  main.cpp
variant/: CMakeLists.txt  constant.h  main.cpp  test_with_storage.h  test_without_storage.h  utility.h  values_description.cpp  values_description.h
variant_benchmark/: CMakeLists.txt  constant.h  main.cpp  utility.cpp  values_description.cpp  values_description.h
